# trackpull

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: .env.example  OVERVIEW.md
.devcontainer/cpu/: Dockerfile  devcontainer.json  post-attach.sh  post-create.sh
.devcontainer/gpu/: Dockerfile  devcontainer.json  post-attach.sh  post-create.sh
.github/workflows/: ci.yml  lint.yml
src/trackpull/: __init__.py  aggregate.py  cli.py  export.py  export_cli.py  plot.py  plot_cli.py  plotcli.py  source.py  store.py  transforms.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_plot_pipeline.py
tests/unit/: test_aggregate_fns.py  test_plot_fns.py  test_store.py  test_transforms.py
