# ============================================================================
# pyproject.toml — trackpull
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trackpull"]

[tool.hatch.version]
path = "src/trackpull/_version.py"

[project]
name = "trackpull"
dynamic = ["version"]
description = "Export and aggregate experiment tracking runs to HDF5"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["wandb", "mlflow", "hdf5", "experiment-tracking", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "wandb>=0.16",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev   = ["pytest>=8.0", "pytest-cov", "ruff", "pre-commit"]

[project.scripts]
trackpull = "trackpull.cli:main"

[project.urls]
Homepage = "https://github.com/sgh14/trackpull"
Repository = "https://github.com/sgh14/trackpull"
Issues = "https://github.com/sgh14/trackpull/issues"

# ============================================================================
# Ruff
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [".git", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["trackpull"]

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
